--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "lint":"eslint 'build/index.js",
-    "prettier":"prettier --config .prettierrc 'build/*.js' --write"
+    "lint": "eslint 'build/index.js",
+    "prettier": "prettier --config .prettierrc 'build/*.js' --write"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +20,8 @@
     "prettier": "^2.4.1",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
