I modificated the gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Node ###
 # Logs
 logs
 *.log
@@ -85,7 +86,7 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
-build/
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
@@ -116,3 +117,7 @@ build/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+### Node Patch ###
+# Serverless Webpack directories
+.webpack/
