--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jasmine": "^3.10.1",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
@@ -23,6 +24,8 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "jasmine": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "lodash": "^4.17.21"
   }
 }
