--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jasmine": "^3.10.1",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
@@ -27,6 +28,7 @@
   "dependencies": {
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "supertest": "^6.1.6"
   }
 }
