--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jasmine": "^3.10.1",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
@@ -26,6 +27,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
     "lodash": "^4.17.21",
