--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "jasmine": "jasmine"
+    "jasmine": "jasmine",
+    "start":"src/index.ts" 
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
