--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "jasmine": "jasmine",
-    "start":"src/index.ts" 
+    "start":"nodemon src/index.ts" 
   },
   "author": "",
   "license": "ISC",
