--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "jasmine": "jasmine",
-    "start":"nodemon src/index.ts" 
+    "start": "nodemon src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/csvtojson": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.10.1",
     "@types/lodash": "^4.14.176",
@@ -29,6 +30,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
